# auto-control-tools

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  teste_Estabilidade Rut.py  tox.ini
docs/: requirements.txt
docs/source/: about.rst  analise.rst  auto_control_tools.analysis.rst  auto_control_tools.controller.apoximation.rst  auto_control_tools.controller.rst  auto_control_tools.model.identification.rst  auto_control_tools.model.rst  auto_control_tools.rst  auto_control_tools.utils.rst  bibliography.bib  bibliography.rst  conf.py  dev.rst  dev_scripts.rst  glossary.rst  index.rst  introduction.rst  modules.rst  references.rst  useful_scripts.rst
docs/source/_templates/: custom-class-template.rst
docs/source/shared/: dependencies.rst  estim_params_obs.rst  general.rst  non_lin_obs.rst  zn_hag_noise_obs.rst
src/: __init__.py
src/auto_control_tools/: __init__.py
src/auto_control_tools/analysis/: __init__.py  discretization.py  impulse.py  poles.py  stability.py
src/auto_control_tools/controller/: __init__.py  controller.py
src/auto_control_tools/controller/apoximation/: base.py  cohen_coon.py  first_order_table.py  ziegler_nichols.py
src/auto_control_tools/model/: __init__.py  first_order_model.py  model.py
src/auto_control_tools/model/identification/: __init__.py  base.py  hagglund.py  nishikawa.py  smith.py  sundaresan_krishnaswamy.py  ziegler_nichols.py
src/auto_control_tools/utils/: __init__.py  data.py  data_input.py  envoirment.py  plot.py
tests/: __init__.py  conftest.py
tests/automated/: routh_table.tex  test_controller.py  test_data_input.py  test_discretization.py  test_first_order_identifications.py  test_impulse.py  test_model.py  test_poles.py  test_stability.py
tests/automated/expected_result_generation/: gen_res_first_order_identifications.py  json_handler.py
tests/manual/: aproximation.py  bib_comp.py  controller.py  data_input.csv  first_order_model.py  identification.py  import_package.py  jupyter_plot.ipynb  model.py
tests/resources/forno/: pwm 15.csv  pwm 20.csv  pwm 25.csv
tests/resources/mesa_giratoria/: primeiro degrau de cinco para dez.csv  quarto degrau de dezessete para vinte.csv  segundo degrau de dez para quinze.csv  terceiro degrau de quinze para dezessete.csv
tests/resources/nivel_tanque/: E_40_50.csv  E_50_60.csv  E_60_70.csv  E_70_80.csv
tests/resources/no_delay_constant_sample_time_identification_cases/: first_order_get_model_results.json  no_delay_test_case_1.csv  no_delay_test_case_2.csv  no_delay_test_case_3.csv
tests/tests_unittest/: test_poles_unittest.py
