[metadata]
name = auto-control-tools
version = 0.0.1
author = Luiz Fernando Niquelatte
author_email = luiz.n22@aluno.ifsc.edu.br
description = control tools for automatic identification and PID controller aproximation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luizn22/auto-control-tools
project_urls =
    Bug Tracker = https://github.com/luizn22/auto-control-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src